Created the Board component with the structure of the board and nothing else, exported and imported into the app

--- a/tic-tac-toe/public/index.html
+++ b/tic-tac-toe/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Tic Tac Toe on React by rsoliveira2018"
     />
+    <link rel="stylesheet" href="generalStyling.css" />
     <title>Tic Tac Toe by rsoliveira2018 on React</title>
   </head>
   <body>
