--- a/app-for-testing/public/index.html
+++ b/app-for-testing/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <title></title>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="App.css">
+    </head>
     <body>
         <div id="root"></div>
     </body>
